---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: ????
  Bugfixes:
    - fix a crash when using a depot or fuel station that is not connected to a rail (reported by @YenzRahbek on the forum)
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2025-09-26
  Changes:
    - When updating the schedule, try to keep the depot stop valid all the time
    - Add setting to choose between refueling with an interrupt or dynamic (LTN controlled) refueling
    - Implement dynamic refueling (controlled by LTN)
    - Default for 'ltn-provider-ignore-stopped-train' setting is changed from `true` to `false` (Issue #26, reported by @Quetzler on github)
  Bugfixes:
    - When a station changes status (depot -> fuel stop or regular stop, fuel stop -> depot etc.),
      ensure that all status bits are correctly updated. Fixes #28, reported by @Spacey42 on the forum)
---------------------------------------------------------------------------------------------------
Version: 2.3.4
Date: 2025-06-23
  Changes:
    - restore the behavior that the virtual signals for the lamp color are only present on the green wire. Add documentation.
    - allow negative amount of fuel for refuel station (treat it as positive). Allows using the LTN combinator to provide fuel amounts.
  Bugfixes:
    - fuel station lamp switched to blue when train parked, then back to cyan when train leaves
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2025-05-09
  Bugfixes:
    - fix broken GetNextLogisticStop function (Reported by @harag-on-stream on Github, PR #18. Thank you!)
    - when a train is put under LTN control, it is removed from a train group first (Suggested by @wchristian on Github, #17. Thank you!)
  Changes: